# distributed-ml

./: .gitignore  README.md  main.py  pyproject.toml
distributed_ml/: numpy_main.py  numpy_single_process.py  preprocessing.py  pytorch_baseline.py
distributed_ml/models/: __init__.py  single_process.py  tensor_parallelism.py
