[tool.poetry]
name = "distributed-ml"
version = "0.0.0"
description = ""
authors = ["Kacper Kielak <kielak.kacper@gmail.com>"]
readme = "README.md"
packages = [{include = "distributed_ml"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
